<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCBFC">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CCCBFC"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/acknowledgements"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#F9A9A6"
            android:gravity="center"
            android:text="Overall Logistics"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/acknowledgements_1"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#F9A9A6"
            android:gravity="center"
            android:text="Event publicity and Recruiting"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/acknowledgements_2"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#F9A9A6"
            android:gravity="center"
            android:text="Hospitality and Event Services"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/acknowledgements_3"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#F9A9A6"
            android:gravity="center"
            android:text="Financial support:"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/acknowledgements_4"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/acknowledgements_4"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image11"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/red" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/acknowledgements_5"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>